// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Split Colors Feature should extract fill and stroke colors separately 1`] = `
{
  "colorMap": Map {
    "#00ff00" => "color",
    "#ff0000" => "color2",
  },
  "colors": [
    "#00ff00",
    "#ff0000",
  ],
  "fillColorMap": Map {
    "#ff0000" => "color2",
  },
  "fillColors": [
    "#ff0000",
  ],
  "gradientColorMap": Map {},
  "gradientColors": [],
  "strokeColorMap": Map {
    "#00ff00" => "color",
  },
  "strokeColors": [
    "#00ff00",
  ],
}
`;

exports[`Split Colors Feature should extract gradient stop colors 1`] = `
{
  "colorMap": Map {
    "#0000ff" => "color",
    "#ff0000" => "color2",
  },
  "colors": [
    "#0000ff",
    "#ff0000",
  ],
  "fillColorMap": Map {},
  "fillColors": [],
  "gradientColorMap": Map {
    "#0000ff" => "color",
    "#ff0000" => "color2",
  },
  "gradientColors": [
    "#0000ff",
    "#ff0000",
  ],
  "strokeColorMap": Map {},
  "strokeColors": [],
}
`;

exports[`Split Colors Feature should handle complex SVG with mixed fill, stroke, and gradient colors 1`] = `
{
  "colorMap": Map {
    "#0000ff" => "color",
    "#00ff00" => "color2",
    "#ff0000" => "color3",
    "#ff00ff" => "color4",
    "#ffff00" => "color5",
  },
  "colors": [
    "#0000ff",
    "#00ff00",
    "#ff0000",
    "#ff00ff",
    "#ffff00",
  ],
  "fillColorMap": Map {
    "#0000ff" => "color",
    "#ff0000" => "color3",
  },
  "fillColors": [
    "#0000ff",
    "#ff0000",
  ],
  "gradientColorMap": Map {
    "#ff00ff" => "color4",
    "#ffff00" => "color5",
  },
  "gradientColors": [
    "#ff00ff",
    "#ffff00",
  ],
  "strokeColorMap": Map {
    "#00ff00" => "color2",
    "#ff0000" => "color3",
  },
  "strokeColors": [
    "#00ff00",
    "#ff0000",
  ],
}
`;

exports[`Split Colors Feature should handle invalid and special color values 1`] = `
{
  "colorMap": Map {
    "#00ff00" => "color",
    "#ff0000" => "color2",
  },
  "colors": [
    "#00ff00",
    "#ff0000",
  ],
  "fillColorMap": Map {
    "#ff0000" => "color2",
  },
  "fillColors": [
    "#ff0000",
  ],
  "gradientColorMap": Map {},
  "gradientColors": [],
  "strokeColorMap": Map {
    "#00ff00" => "color",
  },
  "strokeColors": [
    "#00ff00",
  ],
}
`;

exports[`Split Colors Feature should handle same color in fill and stroke separately 1`] = `
{
  "colorMap": Map {
    "#000000" => "color",
  },
  "colors": [
    "#000000",
  ],
  "fillColorMap": Map {
    "#000000" => "color",
  },
  "fillColors": [
    "#000000",
  ],
  "gradientColorMap": Map {},
  "gradientColors": [],
  "strokeColorMap": Map {
    "#000000" => "color",
  },
  "strokeColors": [
    "#000000",
  ],
}
`;

exports[`Split Colors Feature should replace colors with React props 1`] = `"<path fill={color2} stroke={color} />"`;

exports[`Split Colors Feature should replace colors with Vue props 1`] = `"<stop stop-color="color" />"`;
